# midi2swstruct-web

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yml  static.yml
css/: style.css
js/: collapsible.js  drop-zone.js  main.js  slider.js
pkg/: midi2swstruct_web.d.ts  midi2swstruct_web.js  midi2swstruct_web_bg.wasm  midi2swstruct_web_bg.wasm.d.ts  package.json
src/: lib.rs
