[package]
name = "midi2swstruct-web"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
midi2swstruct = { git = "https://github.com/nukecat/midi2swstruct.git" }
sw-structure-io = { git = "https://github.com/nukecat/sw-structure-io.git" }
midly = "0.5"
anyhow = "1.0"
